--- a/Client/Assembly-CSharp.csproj
+++ b/Client/Assembly-CSharp.csproj
@@ -46,6 +46,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Frame\Core\GameControllor.cs" />
+     <Compile Include="Assets\Scripts\Frame\Core\UIiterface.cs" />
+     <Compile Include="Assets\Scripts\Frame\Resource\ResourceMgr.cs" />
+     <Compile Include="Assets\Scripts\Frame\UI\Base\UIBaseObject.cs" />
      <Compile Include="Assets\Scripts\Frame\UI\Base\UIMapContainer.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Program Files/uniyt_5_6/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
